<resources>
    <string name="app_name">蓦然</string>
    <string name="title_activity_base">BaseActivity</string>
    <!--登陆、注册 -->
    <string name="prompt_email">邮箱：</string>
    <string name="prompt_password">密码：</string>
    <string name="prompt_user_name">昵称：</string>
    <string name="prompt_comfirm_password">重复密码：</string>
    <string name="action_sign_in">登陆</string>
    <string name="action_sign_up">注册</string>
    <string name="sign_up">注册新账户</string>
    <string name="sign_in">返回登陆</string>
    <string name="title_activity_sign_in">SignInActivity</string>
    <string name="error_empty_email">输入邮箱</string>
    <string name="error_pattern_email">邮箱格式错误</string>
    <string name="error_empty_password">密码不能为空</string>
    <string name="error_length_password">密码长度小于6</string>
    <string name="error_invalid">邮箱或者密码错误</string>
    <string name="success_signin">登陆成功</string>
    <string name="success_register">注册成功</string>
    <string name="title_activity_sign_up">SignUpActivity</string>
    <string name="error_empty_nickname">昵称不能为空</string>
    <string name="error_empty_comfirmpassword">重复密码不能为空</string>
    <string name="error_match_password">密码不一致</string>
    <string name="unavailable_network_connection">网络不可用，请检查WI-FI或移动数据连接</string>
    <string name="title_activity_square">SquareActivity</string>
    <string name="menu_text_square">广场</string>
    <string name="menu_text_my">我的</string>
    <string name="random_seed">geekband</string>
</resources>
